fixed submit button, created reset button

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </header>
     <main>
         <section class="main-section" id="main-section">
-            
+
             <div id="rules" class="rules">Guess a number between 1 and 10...You get 3 chances! </div>
-            <div>Guesses left: <span id="guesses-left" class="guesses-left">3</span></div>
             <input type="number" id="input" class="input">
             <button id="submit" class="submit">Submit Guess</button>
-            <div class="highLow" id="highLow"> high low</div>
+            <button id="reset" class="reset">Reset</button>
+            <div class="highLow" id="highLow"></div>
 
         </section>
     </main>
